--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <link
@@ -10,12 +10,11 @@
       crossorigin
     />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <link rel="stylesheet" href="%sveltekit.assets%/styles/reset.css" />
     <meta name="viewport" content="width=device-width" />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover" data-theme="crimson">
-    <div style="display: contents" class="h-full overflow-hidden">
-      %sveltekit.body%
-    </div>
+    <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
